# c-arithmetic

./: .bettercodehub.yml  .codacy.yaml  .codacy.yml  .readthedocs.yaml  .travis.yml  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  README.rst
.github/workflows/: cmake.yml
cmake/: FindCcLint.cmake  FindClangFormat.cmake  FindCoverage.cmake  FindCppCheck.cmake  FindHtmlCoverage.cmake  FindValgrind.cmake
docs/: CMakeLists.txt  Makefile  api.rst  arithmetic.rst  conf.py  index.rst  make.bat  requirements.txt
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/.doctrees/api/: filelist.doctree
docs/_build/.doctrees/api/file/: arithmetic_8h.doctree
docs/_build/_sources/: index.rst.txt
docs/_build/_sources/api/file/: arithmetic_8h.rst.txt
docs/_build/api/: filelist.html
docs/_build/api/file/: arithmetic_8h.html
docs/doxygen/html/: arithmetic_8h.html  arithmetic_8h_source.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html
docs/doxygen/html/search/: all_0.js  functions_0.js
docs/doxygen/latex/: arithmetic_8h.tex  files.tex  refman.tex
docs/doxygen/xml/: arithmetic_8h.xml  index.xml
src/: CMakeLists.txt  Doxyfile  arithmetic.c  arithmetic.h  gcd-32-56.c
src/arithmetic/: arithmetic.c  arithmetic.h  gcd-32-56.c
src/numeric/: CMakeLists.txt  NumericConfig.cmake.in  arithmetic.c  arithmetic.h  gcd-32-56.c  gcd.c  numeric.pc.in
test/: CMakeLists.txt  test-gcd.c
test/arithmetic/: CMakeLists.txt  test-gcd.c  test-lcm.c
test/numeric/: CMakeLists.txt  test-gcd.c  test-lcm.c
